<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:title="@string/action_home" />

    <item
        android:id="@+id/action_fav"
        android:icon="@drawable/ic_favorite_green"
        android:title="@string/favorites" />

    <item
        android:id="@+id/action_rate_app"
        android:icon="@drawable/ic_star"
        android:title="@string/action_rate_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>