<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.logicaltriangle.hnn.MainActivity">

    <LinearLayout
        android:id="@+id/tobBarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0.5dp"
        android:background="@drawable/toolbar_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/tvAppBarTtl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <!--<ImageView
                 android:id="@+id/ivMenuFavorite"
                 android:layout_width="30dp"
                 android:layout_height="25dp"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="10dp"
                 android:src="@drawable/ic_favorite" />-->

            <ImageView
                android:id="@+id/ivMenuSettings"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_menu" />

            <ImageView
                android:id="@+id/ivMenuArrowBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_arrow_back" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomBtnLO"
        android:layout_below="@+id/tobBarContainer"
        android:orientation="vertical" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomBtnLO"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:src="@drawable/ic_favorite"
        android:visibility="gone"
        app:borderWidth="0dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomBtnLO"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:src="@drawable/ic_search"
        app:borderWidth="0dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/bottomBtnLO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="0.5dp"
        android:elevation="100dp"
        app:cardPreventCornerOverlap="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/healthBtn"
                style="@style/TipsBtnBg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0.5dp"
                android:layout_weight="1"
                android:text="@string/health_tips"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/nutritionBtn"
                style="@style/TipsBtnBg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nutrition_plan"
                android:textAllCaps="false" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>